force-app/main/default/objects/Lead/fields/Finder__c.field-meta.xml
<CustomField>
    <fullName>Finder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finder</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The value does not exist or is not compatible with the filter criteria.</errorMessage>
        <filterItems>
            <field>Finder__c.Name</field>
            <operation>equals</operation>
            <valueField>Finder__c.Name</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Finder__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>