force-app/main/default/objects/Lead/fields/Lastname__c.field-meta.xml
<CustomField>
    <fullName>Lastname__c</fullName>
    <label>Last name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>