force-app/main/default/objects/Lead/fields/URLRDStation__c.field-meta.xml
<CustomField>
    <fullName>URLRDStation__c</fullName>
    <label>URL RD Station</label>
    <type>Url</type>
</CustomField>