force-app/main/default/objects/Lead/recordTypes/LeadB2B.recordType-meta.xml
<RecordType>
    <fullName>LeadB2B</fullName>
    <active>true</active>
    <businessProcess>Empire Leads</businessProcess>
    <label>B2B</label>
</RecordType>