force-app/main/default/objects/Lead/recordTypes/LeadB2C.recordType-meta.xml
<RecordType>
    <fullName>LeadB2C</fullName>
    <active>true</active>
    <businessProcess>Empire Leads</businessProcess>
    <label>B2C</label>
</RecordType>