force-app/main/default/objects/Lead/validationRules/Validar_Custumer_Referral.validationRule-meta.xml
<ValidationRule>
    <fullName>Validar_Custumer_Referral</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISBLANK(Finder__c),
OR(
ISPICKVAL(LeadSource, &apos;Customer Referral&apos;)
)
)</errorConditionFormula>
    <errorMessage>If the lead source is Finder or Custumer Referral, you need to enter the Finder.</errorMessage>
</ValidationRule>