force-app/main/default/objects/Lead/listViews/AllOpenLeads.listView-meta.xml
<ListView>
    <fullName>AllOpenLeads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>Finder__c</columns>
    <columns>Size__c</columns>
    <columns>URLRDStation__c</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>LEAD.LAST_TRANSFER</columns>
    <filterScope>Everything</filterScope>
    <label>All Leads</label>
</ListView>