force-app/main/default/objects/Lead/listViews/leadsaccountcontactswithout_Lead.listView-meta.xml
<ListView>
    <fullName>leadsaccountcontactswithout_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Queue New Empire Pavers Leads</label>
    <queue>leadswithout</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>