force-app/main/default/objects/Lead/listViews/RyanLeads.listView-meta.xml
<ListView>
    <fullName>RyanLeads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.FIRST_NAME</columns>
    <columns>LEAD.LAST_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>URLRDStation__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>rreyn</value>
    </filters>
    <label>Ryan - Leads</label>
    <sharedTo>
        <group>Ryan_Leads</group>
    </sharedTo>
</ListView>